unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountClassification__c</fullName>
        <label>Account Classification</label>
        <picklist>
            <controllingField>BusinessStatus__c</controllingField>
            <picklistValues>
                <fullName>Standard</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountCode__c</fullName>
        <displayFormat>ACC{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BusinessStatus__c</fullName>
        <label>Business Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Business</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
                <color>#333333</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FYReference__c</fullName>
        <label>FY Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntraCommunityVAT__c</fullName>
        <label>Intra-Community VAT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberEmployees__c</fullName>
        <globalPicklist>NumberEmployees</globalPicklist>
        <label>Number of Employees</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreviousFYRevenues__c</fullName>
        <label>Previous FY Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetFYRevenues__c</fullName>
        <label>Target FY Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>BusinessAccount</fullName>
        <active>true</active>
        <description>Used for Companies with which SpringFive is making Business</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompetitorAccount</fullName>
        <active>true</active>
        <description>Used for Companies that are competing with SpringFive</description>
        <label>Competitor Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConsumerAccount</fullName>
        <active>false</active>
        <description>Used for Consumers with which SpringFive is making Business</description>
        <label>Consumer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>PartnerAccount</fullName>
        <active>true</active>
        <description>Used for Companies with which SpringFive is partnering (Salesforce, ISVs, etc.)</description>
        <label>Partner Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>